--- a/index.html
+++ b/index.html
@@ -75,25 +75,25 @@
 
                 <h1>XSS</h1>
                 <ul>
-                    <li><a href="/html/xss0.php">XSS #0</a></li>
-                    <li><a href="/html/xss1.php">XSS #1</a></li>
-                    <li><a href="/html/xss2.php">XSS #2</a></li>
-                    <li><a href="/html/xss3.php">XSS #3</a></li>
-                    <li><a href="/html/xss3.1.php">XSS #3.1</a></li>
-                    <li><a href="/html/xss4.php">XSS #4</a></li>
-                    <li><a href="/html/xss5.php">XSS #5</a></li>
-                    <li><a href="/html/xss6.php">XSS #6</a></li>
-                    <li><a href="/html/xss7.php">XSS #7</a></li>
+                    <li><a href="./html/xss0.php">XSS #0</a></li>
+                    <li><a href="./html/xss1.php">XSS #1</a></li>
+                    <li><a href="./html/xss2.php">XSS #2</a></li>
+                    <li><a href="./html/xss3.php">XSS #3</a></li>
+                    <li><a href="./html/xss3.1.php">XSS #3.1</a></li>
+                    <li><a href="./html/xss4.php">XSS #4</a></li>
+                    <li><a href="./html/xss5.php">XSS #5</a></li>
+                    <li><a href="./html/xss6.php">XSS #6</a></li>
+                    <li><a href="./html/xss7.php">XSS #7</a></li>
                 </ul>
                 <h1>DOM XSS</h1>
                 <ul>
-                  <li><a href="/html/dom0.html">DOM XSS</a></li>
+                  <li><a href="./html/dom0.html">DOM XSS</a></li>
                 </ul>
                 <h1>Session Management</h1>
                 <ul>
-                  <li><a href="/html/sess_manage0.php">Session Management #0</a></li>
-                  <li><a href="/html/sess_manage1.php">Session Management #1</a></li>
-                  <li><a href="/html/sess_manage2.php">Session Management #2</a></li>
+                  <li><a href="./html/sess_manage0.php">Session Management #0</a></li>
+                  <li><a href="./html/sess_manage1.php">Session Management #1</a></li>
+                  <li><a href="./html/sess_manage2.php">Session Management #2</a></li>
                 </ul>
                 <h1>XXE</h1>
                 <ul>
@@ -101,29 +101,29 @@
                 </ul>
                 <h1>SQL Injection</h1>
                 <ul>
-                  <li><a href="/html/sqli0.php">SQL Injection</a></li>
+                  <li><a href="./html/sqli0.php">SQL Injection</a></li>
                 </ul>
                 <h1>Password Storage</h1>
                 <ul>
-                  <li><a href="/html/psswd0.php">Password Storage</a></li>
+                  <li><a href="./html/psswd0.php">Password Storage</a></li>
                 </ul>
 
                 <h1 style="text-align: center;"> bonus </h1>
                 <h1>PHP Deserialization</h1>
                 <ul>
-                  <li><a href="/html/serz0.php">PHP Deserialization</a></li>
+                  <li><a href="./html/serz0.php">PHP Deserialization</a></li>
                 </ul>
                 <h1>File Upload</h1>
                 <ul>
-                  <li><a href="/html/fupload0.php">File Upload</a></li>
+                  <li><a href="./html/fupload0.php">File Upload</a></li>
                 </ul>
                 <h1>OS Command Injection</h1>
                 <ul>
-                  <li><a href="/html/cmdi0.php">OS Command Injection</a></li>
+                  <li><a href="./html/cmdi0.php">OS Command Injection</a></li>
                 </ul>
                 <h1>Server Side Request Forgery</h1>
                 <ul>
-                  <li><a href="/html/ssrf0.php">Server Side Request Forgery</a></li>
+                  <li><a href="./html/ssrf0.php">Server Side Request Forgery</a></li>
                 </ul>
              </div>
         </div>
@@ -135,56 +135,56 @@
 
                 <h1>XSS</h1>
                 <ul>
-                    <li><a href="/html_secure/xss0.php">XSS #0</a></li>
-                    <li><a href="/html_secure/xss1.php">XSS #1</a></li>
-                    <li><a href="/html_secure/xss2.php">XSS #2</a></li>
-                    <li><a href="/html_secure/xss3.php">XSS #3</a></li>
-                    <li><a href="/html_secure/xss3.1.php">XSS #3.1</a></li>
-                    <li><a href="/html_secure/xss4.php">XSS #4</a></li>
-                    <li><a href="/html_secure/xss5.php">XSS #5</a></li>
-                    <li><a href="/html_secure/xss6.php">XSS #6</a></li>
-                    <li><a href="/html_secure/xss7.php">XSS #7</a></li>
+                    <li><a href="./html_secure/xss0.php">XSS #0</a></li>
+                    <li><a href="./html_secure/xss1.php">XSS #1</a></li>
+                    <li><a href="./html_secure/xss2.php">XSS #2</a></li>
+                    <li><a href="./html_secure/xss3.php">XSS #3</a></li>
+                    <li><a href="./html_secure/xss3.1.php">XSS #3.1</a></li>
+                    <li><a href="./html_secure/xss4.php">XSS #4</a></li>
+                    <li><a href="./html_secure/xss5.php">XSS #5</a></li>
+                    <li><a href="./html_secure/xss6.php">XSS #6</a></li>
+                    <li><a href="./html_secure/xss7.php">XSS #7</a></li>
                 </ul>
                 <h1>DOM XSS</h1>
                 <ul>
-                  <li><a href="/html_secure/dom0.html">DOM XSS</a></li>
+                  <li><a href="./html_secure/dom0.html">DOM XSS</a></li>
                 </ul>
                 <h1>Session Management</h1>
                 <ul>
-                    <li><a href="/html_secure/sess_manage0.php">Session Management #0</a></li>
-                    <li><a href="/html_secure/sess_manage1.php">Session Management #1</a></li>
-                    <li><a href="/html_secure/sess_manage2.php">Session Management #2</a></li>
+                    <li><a href="./html_secure/sess_manage0.php">Session Management #0</a></li>
+                    <li><a href="./html_secure/sess_manage1.php">Session Management #1</a></li>
+                    <li><a href="./html_secure/sess_manage2.php">Session Management #2</a></li>
                   </ul>
                 <h1>XXE</h1>
                 <ul>
-                  <li><a href="/html_secure/xxe0.php">XXE</a></li>
+                  <li><a href="./html_secure/xxe0.php">XXE</a></li>
                 </ul>
                 <h1>SQL Injection</h1>
                 <ul>
-                  <li><a href="/html_secure/sqli0.php">SQL Injection</a></li>
+                  <li><a href="./html_secure/sqli0.php">SQL Injection</a></li>
                 </ul>
                 <h1>Password Storage</h1>
                 <ul>
-                  <li><a href="/html_secure/psswd0.php">Password Storage</a></li>
+                  <li><a href="./html_secure/psswd0.php">Password Storage</a></li>
                 </ul>
 
 
                 <h1 style="text-align: center;"> bonus </h1>
                 <h1>PHP Deserialization</h1>
                 <ul>
-                  <li><a href="/html_secure/serz0.php">PHP Deserialization</a></li>
+                  <li><a href="./html_secure/serz0.php">PHP Deserialization</a></li>
                 </ul>
                 <h1>File Upload</h1>
                 <ul>
-                  <li><a href="/html_secure/fupload0.php">File Upload</a></li>
+                  <li><a href="./html_secure/fupload0.php">File Upload</a></li>
                 </ul>
                 <h1>OS Command Injection</h1>
                 <ul>
-                  <li><a href="/html_secure/cmdi0.php">OS Command Injection</a></li>
+                  <li><a href="./html_secure/cmdi0.php">OS Command Injection</a></li>
                 </ul>
                 <h1>Server Side Request Forgery</h1>
                 <ul>
-                  <li><a href="/html_secure/ssrf0.php">Server Side Request Forgery</a></li>
+                  <li><a href="./html_secure/ssrf0.php">Server Side Request Forgery</a></li>
                 </ul>
              </div>
         </div>
