--- a/html/dom0.html
+++ b/html/dom0.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title> DOM XSS Rule 3 </title>
-        <link rel='stylesheet' property='stylesheet' id='s' type='text/css' href='/css/s.css' media='all'/>
+        <link rel='stylesheet' property='stylesheet' id='s' type='text/css' href='../css/s.css' media='all'/>
     </head>
     <body>
-        <iframe id='iframe' src='/tpl.html'></iframe>
-        <a href="/index.html">
+        <iframe id='iframe' src='../tpl.html'></iframe>
+        <a href="../index.html">
             <div id="home">
                 /home
             </div>
@@ -15,22 +15,22 @@
             <div id="content">
                 <h1> DOM XSS Rule 3 </h1>
 
-        <form method="get">
-            <label for="untrusted"> Text Box Reflechi </label>
-            <input id="input" type="text" name="untrusted">
-            <input type="submit" id="bouton" value="Submit" onclick="submit()">
-        </form>
+            <form method="get">
+                <label for="untrusted"> Text Box Reflechi </label>
+                <input id="input" type="text" name="untrusted">
+                <input type="submit" id="bouton" value="Submit" onclick="submit()">
+            </form>
 
-        <script>
-            function submit() {
-                var x = document.createElement("a");
-                x.href="#";
-                x.setAttribute("onclick", document.getElementById('input').value);
-                var y = document.createTextNode("Click To Test");
-                x.appendChild(y);
-                document.body.appendChild(x);
-            }
-        </script>
+            <script>
+                function submit() {
+                    var x = document.createElement("a");
+                    x.href="#";
+                    x.setAttribute("onclick", document.getElementById('input').value);
+                    var y = document.createTextNode("Click To Test");
+                    x.appendChild(y);
+                    document.body.appendChild(x);
+                }
+            </script>
             </div>
          </div>
     </body>
