--- a/html_secure/dom0.html
+++ b/html_secure/dom0.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title> DOM XSS Rule 3 </title>
-        <link rel='stylesheet' property='stylesheet' id='s' type='text/css' href='/css/s.css' media='all'/>
+        <link rel='stylesheet' property='stylesheet' id='s' type='text/css' href='../css/s.css' media='all'/>
     </head>
     <body>
-        <iframe id='iframe' src='/tpl.html'></iframe>
-        <a href="/index.html">
+        <iframe id='iframe' src='../tpl.html'></iframe>
+        <a href="../index.html">
             <div id="home">
                 /home
             </div>
@@ -15,16 +15,18 @@
             <div id="content">
                 <h1> DOM XSS Rule 3 </h1>
 
-        <label for="untrusted"> Text Box Reflechi </label>
-        <input id="input" type="text" name="untrusted">
-        <input type="submit" id="bouton" value="Submit" onclick="submit()">
-        
-        <a id="bb" href="#"> Click To Test</a>
+                <label for="untrusted"> Text Box Reflechi </label>
+                <input id="input" type="text" name="untrusted">
+                <input type="submit" id="bouton" value="Submit" onclick="submit()">
+                
+                <a id="bb" href="#"> Click To Test</a>
 
-        <script>
-            function submit() {
-                document.getElementById("bb").onclick = document.getElementById('input').value;
-            }
-        </script>
+                <script>
+                    function submit() {
+                        document.getElementById("bb").onclick = document.getElementById('input').value;
+                    }
+                </script>
+            </div>
+        </div>
     </body>
 </html>
