some other fixes (syntax)

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </ul>
                 <h1>XXE</h1>
                 <ul>
-                  <li><a href="/html/xxe0.php">XXE</a></li>
+                  <li><a href="./html/xxe0.php">XXE</a></li>
                 </ul>
                 <h1>SQL Injection</h1>
                 <ul>
